# panel-monitoring-agent-demo

./: .env  .gitignore  README.md  conftest.py  justfile  langgraph.json  panel_agent.ipynb  panel_agent.py  pyproject.toml  test_panel_agent.py
.github/workflows/: test-deberta-api.yml
.ipynb_checkpoints/: agent-checkpoint.ipynb  event_agent_langgraph_demo-checkpoint.ipynb  event_agent_langgraph_openai-checkpoint.ipynb  event_agent_langgraph_openai_langsmith-checkpoint.ipynb  panel_agent-checkpoint.ipynb  panel_agent-checkpoint.py  panel_monitoring_notebook-checkpoint.py
.langgraph_api/: .langgraph_ops.pckl
gcp/events-report/: README.md  firestore.indexes.json  main.py
gcp/events-report/static/: index.html
gcp/functions/: README.md  justfile  test_local.py
gcp/functions/pubsub_to_langsmith/: main.py  requirements.txt
panel_monitoring/: __main__.py  genai-vertex-example.py  panel_agent_genai.py  panel_agent_openai.ipynb  panel_agent_openai.py  panel_agent_vertexai.py
panel_monitoring/app/: config.py  graph.py  injection_detector.py  nodes.py  retry.py  rules.py  runtime.py  schemas.py
panel_monitoring/app/clients/llms/: __init__.py  base.py  gemini.py  openai.py  provider_base.py  vertexai.py
panel_monitoring/data/: __init__.py  firestore_client.py  ingest.py
panel_monitoring/models/: base.py  classification.py  event.py  firestore_docs.py  prompt_spec.py
panel_monitoring/scripts/: ingest_business_context.py  panel_agent.py  peek_firestore.py  push_prompt_to_firestore.py  seed_firestore.py  smoke_auth_check.py  smoke_datastore.py  test_rag.py
services/deberta-api/: Dockerfile  Dockerfile.base  main.py
testing-examples/datasets/: seed_langsmith_dataset.py  tag_dataset_version.py
tests/: test_deberta_api.py  test_injection_detection.py  test_injection_ml.py  test_prompt_spec.py  test_retry.py
tests/golden_tests/: cleaned_test.json  conftest.py  formatted-edge-test-data.json  formatted-test-data.json  panel_agent_golden_tests_expanded.csv  test-data.json  test_golden_panel.py  updated-golden-test-data.json
