[project]
name = "panel-monitoring-agent"
version = "1.0.0"
description = "Panel Monitoring Agent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
  "langgraph>=1.0.0",
  "langchain[openai]>=1.0.0",
  "langchain-openai>=1.0.0",
  "langchain-anthropic>=1.0.0",
  "langgraph-prebuilt",
  "langgraph-sdk",
  "langgraph-checkpoint-sqlite",
  "langsmith",
  "langchain-community",
  "langchain-core",
  "langchain-google-vertexai",
  "langchain-google-genai",
  "google-cloud-aiplatform",
  "google-api-core",
  "google-auth>=2.40.3",
  "google-cloud-firestore>=2.21.0",
  "firebase-admin>=6.9.0",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "tavily-python",
  "wikipedia",
  "trustcall",
  "langgraph-cli[inmem]>=0.4.0",
  "notebook",
  "functions-framework>=3.9.2",
  "pytest>=8.4.2",
  "langchain-text-splitters>=1.0.0",
  "bs4>=0.0.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.13.2",
  "pytest>=8.4.2",
  "langchain>=0.3.27",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panel_monitoring"]

[tool.hatch.build.targets.sdist]
include = ["src/panel_monitoring", "README.md", "pyproject.toml"]

[tool.uv]
managed = true
package = true

[tool.ruff]
exclude = ["**/*.ipynb"]
