[project]
name = "panel-monitoring-agent-demo"
version = "1.0.0"
description = "DeBERTa Prompt Injection Detection Service"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = false
